# user-installed-packages

data/: meson.build
data/bash-completion/: user-installed-packages
debian/: changelog  control  rules
exec/: meson.build  uip-about  uip-apt-update  user-installed-packages
i18n/: make-pot  tx-get-po  user-installed-packages.pot
i18n/help-po/: LINGUAS  en_US.po
i18n/po/: LINGUAS  ca.po  de.po  el.po  es.po  es_ES.po  fi.po  fr.po  fr_BE.po  gl_ES.po  hu.po  it.po  ja.po  nb.po  nl.po  nl_BE.po  pl.po  pt.po  pt_BR.po  ru.po  ru_RU.po  sl.po  sq.po  sv.po  tr.po  zh_CN.po
icons/: meson.build
